--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <h3>Hello!</h3>
         <h1><span id="typing"></span></h1>
         <h2>Explore the journey of HTML &amp; CSS.</h2>
-        <p>Hello! I'm Divyanshu Pandey, a Class 10<sup>th</sup> student passionate about CSS and HTML.</p>
+        <p>Hello! I'm Divyanshu Pandey, a Class 12<sup>th</sup> student passionate about CSS and HTML.</p>
         <a href="#about" class="primary-btn">Explore Me</a>
-        <a href="resume.pdf" class="primary-btn" download style="margin-left:1rem;">Download Resume</a>
+      <!--  <a href="resume.pdf" class="primary-btn" download style="margin-left:1rem;">Download Resume</a>-->
         <div class="social-links">
           <a href="https://github.com/Divyanshu5520" aria-label="GitHub" target="_blank"><img src="https://img.icons8.com/?size=48&id=32323&format=png" class="img" alt="GitHub"></a>
           <a href="#" aria-label="LinkedIn" target="_blank"><img src="https://img.icons8.com/?size=48&id=uLWV5A9vXIPu&format=png" class="img" alt="LinkedIn"></a>
@@ -74,7 +74,7 @@
   <section id="about" class="section">
     <div class="container column-container">
       <h1>About Me</h1>
-      <p class="info">Hi 🖐 I am a 10<sup>th</sup> standard student passionate about coding.</p>
+      <p class="info">Hi 🖐 I am a 12<sup>th</sup> standard student passionate about coding.</p>
       <p class="info">💻 Turning ideas into reality through technology.</p>
       <p class="info">Explore my project and let's connect!🚀</p>
       <p class="info">Thank you 🙏</p>
@@ -96,11 +96,11 @@
         </div>
         <div class="skillbar">
           <span>JavaScript</span>
-          <div class="bar"><div class="progress" style="width:70%"></div></div>
+          <div class="bar"><div class="progress" style="width:30%"></div></div>
         </div>
         <div class="skillbar">
           <span>Python</span>
-          <div class="bar"><div class="progress" style="width:65%"></div></div>
+          <div class="bar"><div class="progress" style="width:45%"></div></div>
         </div>
         <!-- Add more skillbars as needed -->
       </div>
@@ -121,9 +121,9 @@
         </div>
         <div class="project-card">
           <img src="project2.png" alt="Project 2 Screenshot">
-          <h2>Calculator App</h2>
-          <p>A basic calculator app made using pure JavaScript and CSS.</p>
-          <a href="#" class="primary-btn" target="_blank">View Project</a>
+          <h2>Chatting App</h2>
+          <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
+          <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
         </div>
         <!-- Add more project cards as needed -->
       </div>
@@ -140,7 +140,7 @@
           <div class="timeline-content">
             <h2>High School Student</h2>
             <span>2023 - Present</span>
-            <p>Currently studying in 10th standard, focusing on Computer Science and Mathematics.</p>
+            <p>Currently studying in 12th standard, focusing on Computer Science and Mathematics.</p>
           </div>
         </div>
         <!-- Add more timeline items as you gain experience -->
@@ -154,7 +154,7 @@
       <h1>Achievements & Certificates</h1>
       <div class="achievements-grid">
         <div class="achievement-card">
-          <img src="certificate1.png" alt="Certificate 1">
+          <img src="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MDEzNzI3MDA1NzMyMTUy?story_media_id=3274123747025932124_53864486444&igsh=azQ1dHJiNWJobmo5" alt="Certificate 1">
           <h2>HTML & CSS Certificate</h2>
           <p>Received from FreeCodeCamp (2024).</p>
         </div>
