--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <h1>Achievements & Certificates</h1>
       <div class="achievements-grid">
         <div class="achievement-card">
-          <img src="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MDEzNzI3MDA1NzMyMTUy?story_media_id=3274123747025932124_53864486444&igsh=azQ1dHJiNWJobmo5" alt="Certificate 1">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Certificate.jpg" alt="Certificate 1">
           <h2>HTML & CSS Certificate</h2>
           <p>Received from FreeCodeCamp (2024).</p>
         </div>
