--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <a href="#" class="primary-btn" target="_blank">GitHub Repo</a>
         </div>
         <div class="project-card">
-          <img src="project2.png" alt="Project 2 Screenshot">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Chatting%20app.jpg" alt="Project 2 Screenshot">
           <h2>Chatting App</h2>
           <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
           <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
