--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
       <h1>Projects</h1>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="project1.png" alt="Project 1 Screenshot">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Code%20to%20PDF.jpg" alt="Project 1 Screenshot">
           <h2>Personal Portfolio</h2>
           <p>My own website, built with HTML, CSS and a sprinkle of JavaScript.</p>
-          <a href="#" class="primary-btn" target="_blank">View Project</a>
-          <a href="#" class="primary-btn" target="_blank">GitHub Repo</a>
+          <a href="" class="primary-btn" target="_blank">View Project</a>
+         <!-- <a href="#" class="primary-btn" target="_blank">GitHub Repo</a> -->
         </div>
         <div class="project-card">
           <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Chatting%20app.jpg" alt="Project 2 Screenshot">
