--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Code%20to%20PDF.jpg" alt="Project 1 Screenshot">
           <h2>Personal Portfolio</h2>
           <p>My own website, built with HTML, CSS and a sprinkle of JavaScript.</p>
-          <a href="" class="primary-btn" target="_blank">View Project</a>
+          <a href="https://codecr4cker.github.io/Code-2-pdf/" class="primary-btn" target="_blank">View Project</a>
          <!-- <a href="#" class="primary-btn" target="_blank">GitHub Repo</a> -->
         </div>
         <div class="project-card">
