--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="img-container" alt="Divyanshu">
-        <img src="https://avatars.githubusercontent.com/u/64949957?v=4" alt="Divyanshu Pandey photo">
+        <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/itz.png" alt="Divyanshu Pandey photo">
       </div>
     </div>
   </section>
