--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 </head>
 <body>
   <!-- Loader -->
-  <div id="loader">
+ <!-- <div id="loader">
     <div class="loader-inner">
       <span class="loader-initials">DP</span>
       <div class="loader-bounce"></div>
     </div>
+  </div> -->
+  <div id="loader">
+  <div class="loader-circle"></div>
   </div>
+  
   <!-- Custom Cursor -->
-  <div id="custom-cursor"></div>
+ <!-- <div id="custom-cursor"></div> -->
   <!-- Dark/Light Mode Toggle -->
   <button id="theme-toggle" aria-label="Toggle dark mode"><i class="fa-solid fa-moon"></i></button>
   <!-- Back to Top -->
@@ -70,7 +74,7 @@
       <div class="img-container" alt="Divyanshu">
         <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/itz.png" alt="Divyanshu Pandey photo">
       </div>
-      <div class="scroll-arrow"></div>
+    <!--  <div class="scroll-arrow"></div> -->
     </div>
   </section>
 
