--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
       <div class="loader-bounce"></div>
     </div>
   </div> -->
+  <!-- Loader -->
   <div id="loader">
-  <div class="loader-circle"></div>
+    <img src="https://raw.githubusercontent.com/CodeCr4cker/html-test/main/image/logoA.png" alt="Logo">
+    <div class="spinner"></div>
+    <span>Loading...</span>
   </div>
   
   <!-- Custom Cursor -->
