--- a/index.html
+++ b/index.html
@@ -7,32 +7,16 @@
   <meta name="description" content="Divyanshu Pandey's personal portfolio.">
   <meta name="keywords" content="Divyanshu Pandey, portfolio, HTML, CSS, web developer, student">
   <meta name="author" content="Divyanshu Pandey">
-  <link rel="icon" id="dynamic-favicon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Play:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
-  <!-- Loader -->
- <!-- <div id="loader">
-    <div class="loader-inner">
-      <span class="loader-initials">DP</span>
-      <div class="loader-bounce"></div>
-    </div>
-  </div> -->
-  <!-- Loader -->
-  <div id="loader">
-    <img src="https://raw.githubusercontent.com/CodeCr4cker/html-test/main/image/logoA.png" alt="Logo">
-    <div class="spinner"></div>
-    <span>Loading...</span>
-  </div>
-  
-  <!-- Custom Cursor -->
- <!-- <div id="custom-cursor"></div> -->
   <!-- Dark/Light Mode Toggle -->
   <button id="theme-toggle" aria-label="Toggle dark mode"><i class="fa-solid fa-moon"></i></button>
-  <!-- Back to Top -->
+
+  <!-- Back to Top Button -->
   <button onclick="window.scrollTo({top:0,behavior:'smooth'});" id="back-to-top" aria-label="Back to top"><i class="fa fa-arrow-up"></i></button>
 
   <!-- Navbar -->
@@ -41,31 +25,32 @@
     <button id="menu-btn" class="fa fa-bars" aria-label="Open menu"></button>
     <nav class="navbar" aria-label="Main menu">
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#stats">Stats</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#home" tabindex="0">Home</a></li>
+        <li><a href="#about" tabindex="0">About</a></li>
+        <li><a href="#skills" tabindex="0">Skills</a></li>
+        <li><a href="#projects" tabindex="0">Projects</a></li>
+        <li><a href="#education" tabindex="0">Education</a></li>
+        <li><a href="#achievements" tabindex="0">Achievements</a></li>
+        <li><a href="#testimonials" tabindex="0">Testimonials</a></li>
+        <li><a href="#blog" tabindex="0">Blog</a></li>
+        <li><a href="#contact" tabindex="0">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- Hero Section -->
   <section id="home" class="first-section bg-grey">
-    <div id="particles-js"></div>
-    <div class="container row-container hero-animate">
+    <div class="container row-container">
       <div class="content">
-        <br><br><br><br>
+        <br>
+        <br>
+        <br><br>
         <h3>Hello!</h3>
         <h2><span id="typing"></span></h2>
         <h2>Explore the journey of HTML &amp; CSS.</h2>
         <p>Hello! I'm Divyanshu Pandey, a Class 12<sup>th</sup> student passionate about CSS and HTML.</p>
         <a href="#about" class="primary-btn">Explore Me</a>
+      <!--  <a href="resume.pdf" class="primary-btn" download style="margin-left:1rem;">Download Resume</a>-->
         <div class="social-links">
           <a href="https://github.com/Divyanshu5520" aria-label="GitHub" target="_blank"><img src="https://img.icons8.com/?size=48&id=32323&format=png" class="img" alt="GitHub"></a>
           <a href="#" aria-label="LinkedIn" target="_blank"><img src="https://img.icons8.com/?size=48&id=uLWV5A9vXIPu&format=png" class="img" alt="LinkedIn"></a>
@@ -77,11 +62,18 @@
       <div class="img-container" alt="Divyanshu">
         <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/itz.png" alt="Divyanshu Pandey photo">
       </div>
-    <!--  <div class="scroll-arrow"></div> -->
     </div>
   </section>
 
-  <!-- About -->
+  <!-- Video Introduction (Stub) -->
+  <!-- <section id="intro-video" class="section">
+    <div class="container column-container">
+      <h1>Video Introduction</h1>
+      <video src="my-intro.mp4" controls poster="poster.jpg" width="400" aria-label="Divyanshu's Introduction"></video>
+    </div>
+  </section> -->
+
+  <!-- About Section -->
   <section id="about" class="section">
     <div class="container column-container">
       <h1>About Me</h1>
@@ -92,97 +84,74 @@
     </div>
   </section>
 
-  <!-- Skills -->
+  <!-- Skills Section -->
   <section id="skills" class="section bg-grey">
     <div class="container column-container">
       <h1>Skills</h1>
       <div class="skills-list">
         <div class="skillbar">
           <span>HTML</span>
-          <div class="bar"><div class="progress" data-value="90%"></div></div>
+          <div class="bar"><div class="progress" style="width:90%"></div></div>
         </div>
         <div class="skillbar">
           <span>CSS</span>
-          <div class="bar"><div class="progress" data-value="85%"></div></div>
+          <div class="bar"><div class="progress" style="width:85%"></div></div>
         </div>
         <div class="skillbar">
           <span>JavaScript</span>
-          <div class="bar"><div class="progress" data-value="30%"></div></div>
+          <div class="bar"><div class="progress" style="width:30%"></div></div>
         </div>
         <div class="skillbar">
           <span>Python</span>
-          <div class="bar"><div class="progress" data-value="45%"></div></div>
+          <div class="bar"><div class="progress" style="width:45%"></div></div>
         </div>
+        <!-- Add more skillbars as needed -->
       </div>
     </div>
   </section>
 
-  <!-- Projects -->
+  <!-- Projects Section -->
   <section id="projects" class="section">
     <div class="container column-container">
       <h1>Projects</h1>
-      <div class="project-filters">
-        <button class="filter-btn active" data-filter="all">All</button>
-        <button class="filter-btn" data-filter="html">HTML</button>
-        <button class="filter-btn" data-filter="css">CSS</button>
-        <button class="filter-btn" data-filter="js">JavaScript</button>
-        <button class="filter-btn" data-filter="react">React</button>
-      </div>
       <div class="projects-grid">
-        <div class="project-card" data-tags="html css js">
+        <div class="project-card">
           <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Code%20to%20PDF.jpg" alt="Project 1 Screenshot">
           <h2>Personal Portfolio</h2>
           <p>My own website, built with HTML, CSS and a sprinkle of JavaScript.</p>
           <a href="https://codecr4cker.github.io/Code-2-pdf/" class="primary-btn" target="_blank">View Project</a>
+         <!-- <a href="#" class="primary-btn" target="_blank">GitHub Repo</a> -->
         </div>
-        <div class="project-card" data-tags="react js html css">
+        <div class="project-card">
           <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Chatting%20app.jpg" alt="Project 2 Screenshot">
           <h2>Chatting App</h2>
           <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
           <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
         </div>
-        <!-- More cards... -->
+        <!-- Add more project cards as needed -->
       </div>
     </div>
   </section>
 
-  <!-- Stats -->
-  <section class="section" id="stats">
-    <div class="container column-container">
-      <h1>My Stats</h1>
-      <div class="stats-cards">
-        <div class="stat-card"><span class="counter" data-to="3">0</span><br>Years Coding</div>
-        <div class="stat-card"><span class="counter" data-to="10">0</span><br>Projects</div>
-        <div class="stat-card"><span class="counter" data-to="5">0</span><br>Certificates</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Timeline -->
+  <!-- Education & Experience Timeline -->
   <section id="education" class="section bg-grey">
     <div class="container column-container">
       <h1>Education & Experience</h1>
-      <div class="timeline" id="timeline">
-        <div class="timeline-dots">
-          <span class="timeline-dot active" data-index="0"></span>
-          <!-- More dots as needed -->
-        </div>
-        <div class="timeline-items">
-          <div class="timeline-item" data-index="0">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-              <h2>High School Student</h2>
-              <span>2023 - Present</span>
-              <p>Currently studying in 12th standard, focusing on Computer Science and Mathematics.</p>
-            </div>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <h2>High School Student</h2>
+            <span>2023 - Present</span>
+            <p>Currently studying in 12th standard, focusing on Computer Science and Mathematics.</p>
           </div>
-          <!-- More items as needed -->
         </div>
+        <!-- Add more timeline items as you gain experience -->
       </div>
     </div>
   </section>
 
-  <!-- Achievements -->
+  <!-- Achievements / Certificates Section -->
   <section id="achievements" class="section">
     <div class="container column-container">
       <h1>Achievements & Certificates</h1>
@@ -192,11 +161,12 @@
           <h2>HTML & CSS Certificate</h2>
           <p>Received from FreeCodeCamp (2024).</p>
         </div>
+        <!-- Add more achievement cards as needed -->
       </div>
     </div>
   </section>
 
-  <!-- Testimonials -->
+  <!-- Testimonials Carousel -->
   <section id="testimonials" class="section bg-grey">
     <div class="container column-container">
       <h1>Testimonials</h1>
@@ -209,13 +179,14 @@
           <p>"He turns ideas into beautiful websites. Highly recommended!"</p>
           <span>- Mentor</span>
         </div>
+        <!-- Add more testimonials as needed -->
         <button class="carousel-btn prev" aria-label="Previous testimonial">&#10094;</button>
         <button class="carousel-btn next" aria-label="Next testimonial">&#10095;</button>
       </div>
     </div>
   </section>
 
-  <!-- Blog -->
+  <!-- Blog/Articles Section (Stub) -->
   <section id="blog" class="section">
     <div class="container column-container">
       <h1>Blog / Articles</h1>
@@ -223,21 +194,27 @@
         <div class="blog-card">
           <h2>How I Built My First Website</h2>
           <p>Sharing my journey from a simple HTML file to a full website.</p>
-          <button class="primary-btn read-more-btn" data-title="How I Built My First Website" data-content="Full article content here...">Read More</button>
+          <a href="#" class="primary-btn">Read More</a>
         </div>
-      </div>
-    </div>
-    <!-- Blog Modal -->
-    <div id="blog-modal" class="modal">
-      <div class="modal-content">
-        <span class="close-modal">&times;</span>
-        <h2 id="modal-title"></h2>
-        <p id="modal-content"></p>
+        <!-- Add more blog cards as you write articles -->
       </div>
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Newsletter Signup (Stub) -->
+  <!--
+  <section id="newsletter" class="section bg-grey">
+    <div class="container column-container">
+      <h1>Subscribe to my Newsletter</h1>
+      <form>
+        <input type="email" placeholder="Your email address" required>
+        <input type="submit" value="Subscribe" class="primary-btn">
+      </form>
+    </div>
+  </section>
+  -->
+
+  <!-- Contact Section -->
   <section id="contact" class="section">
     <div class="container column-container">
       <div class="content">
@@ -254,53 +231,30 @@
     </div>
   </section>
 
+  <!-- Chat Widget (Stub) -->
+  <!--
+    <div id="chat-widget">
+      <button class="chat-toggle" aria-label="Open chat"><i class="fa fa-comments"></i></button>
+      <div class="chat-box" style="display:none;">
+        <p>Hi! How can I help you?</p>
+        <input type="text" placeholder="Type your message...">
+        <button>Send</button>
+      </div>
+    </div>
+  -->
+
   <!-- Footer -->
   <footer class="footer-section bg-black">
     <div class="container">
       <pre>© <span id="year"></span> Divyanshu Pandey</pre>
       <div class="footer-social">
         <a href="https://github.com/Divyanshu5520" aria-label="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+        <!-- Add more social icons as needed -->
       </div>
     </div>
   </footer>
 
-  <!-- ADMIN LOGIN & DASHBOARD -->
-  <button id="admin-login-btn" class="primary-btn" style="position:fixed;bottom:2rem;left:2rem;z-index:1020;">Admin Login</button>
-  <div id="login-modal" class="modal">
-    <div class="modal-content" style="max-width:340px;width:95%;text-align:center;">
-      <span class="close-modal" id="close-login">&times;</span>
-      <h2>Admin Login</h2>
-      <form id="login-form" autocomplete="off">
-        <input type="email" id="login-email" placeholder="Email" required><br>
-        <input type="password" id="login-password" placeholder="Password" required><br>
-        <button type="submit" class="primary-btn" style="width:100%;">Login</button>
-        <div id="login-error" style="color:red;margin-top:1rem;display:none;"></div>
-      </form>
-    </div>
-  </div>
-  <div id="admin-modal" class="modal">
-    <div class="modal-content admin-panel">
-      <span class="close-modal" id="close-admin">&times;</span>
-      <button id="admin-logout-btn" class="primary-btn" style="position:absolute;top:1.5rem;right:4.5rem;">Logout</button>
-      <h1>Admin Dashboard</h1>
-      <section class="dashboard-section">
-        <h2>Site Stats</h2>
-        <div class="stats-cards">
-          <div class="stat-card"><span id="admin-projects">0</span><br>Projects</div>
-          <div class="stat-card"><span id="admin-blogs">0</span><br>Blog Posts</div>
-          <div class="stat-card"><span id="admin-messages">0</span><br>Messages</div>
-        </div>
-      </section>
-      <section class="dashboard-section">
-        <h2>Quick Actions</h2>
-        <button class="primary-btn">Add Project</button>
-        <button class="primary-btn">Add Blog Post</button>
-        <button class="primary-btn">Review Messages</button>
-      </section>
-    </div>
-  </div>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <!-- JavaScript for features -->
   <script src="scripts.js"></script>
 </body>
-</html>
+    </html>
