--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
           <span>Python</span>
           <div class="bar"><div class="progress" style="width:45%"></div></div>
         </div>
+        <div class="skillbar">
+          <span>My SQL</span>
+          <div class="bar"><div class="progress" style="width:50%"></div></div>
+        </div>
         <!-- Add more skillbars as needed -->
       </div>
     </div>
