--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
   <!-- Dark/Light Mode Toggle -->
-  <button id="theme-toggle" aria-label="Toggle dark mode"><i class="fa-solid fa-moon"></i></button>
+  <button id="theme-toggle" aria-label="Toggle dark mode">🌆</button>
 
   <!-- Back to Top Button -->
-  <button onclick="window.scrollTo({top:0,behavior:'smooth'});" id="back-to-top" aria-label="Back to top"><i class="fa fa-arrow-up"></i></button>
+  <button onclick="window.scrollTo({top:0,behavior:'smooth'});" id="back-to-top" aria-label="Back to top">☝️</button>
 
   <!-- Navbar -->
   <header>
