--- a/index.html
+++ b/index.html
@@ -198,8 +198,14 @@
         <div class="blog-card">
           <h2>How I Built My First Website</h2>
           <p>Sharing my journey from a simple HTML file to a full website.</p>
-          <a href="#" class="primary-btn">Read More</a>
+          <a href="#" class="primary-btn" id="readMoreBtn">Read More</a>
         </div>
+          <div class="overlay" id="overlay"></div>
+  <div class="popup" id="popup">
+    <p>
+      This Website is fully created by Divyanshu Pandey</p>
+    <button class="close-btn" id="closeBtn">Close</button>
+  </div>
         <!-- Add more blog cards as you write articles -->
       </div>
     </div>
