--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="blog-card">
           <h2>How I Built My First Website</h2>
           <p>Sharing my journey from a simple HTML file to a full website.</p>
-          <a class="primary-btn" id="readMoreBtn">Read More</a>
+          <a class="primary-btn" id="openPopup">Read More</a>
         </div>
           <div class="overlay" id="overlay"></div>
   <div class="popup" id="popup">
