--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <div class="popup" id="popup">
     <p>
       This Website is fully created by Divyanshu Pandey</p>
-    <button class="close-btn" id="closeBtn">Close</button>
+    <button class="close-btn" id="closePopup">Close</button>
   </div>
         <!-- Add more blog cards as you write articles -->
       </div>
