--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <h1>Education & Experience</h1>
       <div class="timeline">
         <div class="timeline-item">
-          <div class="timeline-dot"></div>
+       <!--   <div class="timeline-dot"></div> -->
           <div class="timeline-content">
             <h2>High School Student</h2>
             <span>2023 - Present</span>
