--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <!-- loader -->
+  <div id="loader">
+  <div class="spinner"></div>
+  </div>
   <!-- Dark/Light Mode Toggle -->
   <button id="theme-toggle" aria-label="Toggle dark mode">🌆</button>
 
