--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<!-- Lottie Background -->
+  <div class="lottie-background">
+    <lottie-player
+      src="https://assets4.lottiefiles.com/packages/lf20_7wwm1c9h.json"
+      background="transparent"
+      speed="1"
+      loop
+      autoplay>
+    </lottie-player>
+  </div>
   <!-- loader -->
   <div id="loader">
   <div class="spinner"></div>
@@ -268,7 +277,9 @@
       </div>
     </div>
   </footer>
-
+  
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  
   <!-- JavaScript for features -->
   <script src="scripts.js"></script>
 </body>
