--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   <div class="spinner"></div>
   </div>
   <!-- Dark/Light Mode Toggle -->
-  <button id="theme-toggle" aria-label="Toggle dark mode">🌆</button>
 
   <!-- Back to Top Button -->
   <button onclick="window.scrollTo({top:0,behavior:'smooth'});" id="back-to-top" aria-label="Back to top">☝️</button>
@@ -39,6 +38,8 @@
     <button id="menu-btn"  aria-label="Open menu"> ☰ </button>
     <nav class="navbar" aria-label="Main menu">
       <ul>
+          <button id="theme-toggle" aria-label="Toggle dark mode">theam</button>
+        
         <li><a href="#home" tabindex="0">Home</a></li>
         <li><a href="#about" tabindex="0">About</a></li>
         <li><a href="#skills" tabindex="0">Skills</a></li>
