--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <button id="menu-btn"  aria-label="Open menu"> ☰ </button>
     <nav class="navbar" aria-label="Main menu">
       <ul>
-          <button id="theme-toggle" aria-label="Toggle dark mode">theam</button>
+          <button id="theme-toggle" aria-label="Toggle dark mode"></button>
         
         <li><a href="#home" tabindex="0">Home</a></li>
         <li><a href="#about" tabindex="0">About</a></li>
