--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <meta name="keywords" content="Divyanshu Pandey, portfolio, HTML, CSS, web developer, student">
   <meta name="author" content="Divyanshu Pandey">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <!-- Add this in <head> -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
+  
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Play:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
   <link rel="stylesheet" href="styles.css">
@@ -38,7 +44,10 @@
     <button id="menu-btn"  aria-label="Open menu"> ☰ </button>
     <nav class="navbar" aria-label="Main menu">
       <ul>
-          <button id="theme-toggle" aria-label="Toggle dark mode"></button>
+          <button aria-label="Toggle dark mode">
+  <i class="fas fa-moon"></i>  <!-- Font Awesome moon icon -->
+</button>
+
         
         <li><a href="#home" tabindex="0">Home</a></li>
         <li><a href="#about" tabindex="0">About</a></li>
