--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <button id="menu-btn"  aria-label="Open menu"> ☰ </button>
     <nav class="navbar" aria-label="Main menu">
       <ul>
-          <button aria-label="Toggle dark mode">
+          <button id="theam-toggle" aria-label="Toggle dark mode">
   <i class="fas fa-moon"></i>  <!-- Font Awesome moon icon -->
 </button>
 
