--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Navbar -->
   <header>
-    <a href="#" class="logo" aria-label="Home">Divyanshu Pandey</a>
+<!--    <a href="#" class="logo" aria-label="Home">Divyanshu Pandey</a> -->
     <button id="menu-btn"  aria-label="Open menu"> ☰ </button>
     <nav class="navbar" aria-label="Main menu">
       
