--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   <meta name="author" content="Divyanshu Pandey">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- Add this in <head> -->
-<link
+<!-- <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
+/> -->
   
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Play:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Lottie Background -->
+  
+<!-- Lottie Background 
   <div class="lottie-background">
     <lottie-player
       src="https://assets4.lottiefiles.com/packages/lf20_7wwm1c9h.json"
@@ -28,11 +29,12 @@
       loop
       autoplay>
     </lottie-player>
-  </div>
-  <!-- loader -->
+  </div> -->
+  <!-- loader 
   <div id="loader">
   <div class="spinner"></div>
-  </div>
+  </div> -->
+  
   <!-- Dark/Light Mode Toggle -->
 <button id="theam-toggle" aria-label="Toggle dark mode">
   <i class="fas fa-moon"></i>  <!-- Font Awesome moon icon -->
