--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
   <!-- Navbar -->
   <header>
 <!--    <a href="#" class="logo" aria-label="Home">Divyanshu Pandey</a> -->
-    <button id="menu-btn"  aria-label="Open menu"> ☰ </button>
+   <!--  <button id="menu-btn"  aria-label="Open menu"> ☰ </button> -->
+    <button id="menu-btn" aria-label="Open menu" class="menu-icon">
+    <i class="fas fa-bars"></i>
+    </button>
     <nav class="navbar" aria-label="Main menu">
       
       <ul>
