--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <br>
         <br>
         <br><br>
+        <div class="img-container" alt="Divyanshu">
+        <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/itz.png" alt="Divyanshu Pandey photo">
+        </div>
         <h3>Hello!</h3>
         <h2><span id="typing"></span></h2>
         <h2>Explore the journey of HTML &amp; CSS.</h2>
@@ -81,9 +84,9 @@
           <a href="#" aria-label="Email" target="_blank"><img src="https://img.icons8.com/?size=80&id=wqGmdISvpm0c&format=png" class="img" alt="Email"></a>
         </div>
       </div>
-      <div class="img-container" alt="Divyanshu">
+     <!-- <div class="img-container" alt="Divyanshu">
         <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/itz.png" alt="Divyanshu Pandey photo">
-      </div>
+      </div> -->
     </div>
   </section>
 
