--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- Navbar -->
   <header>
     <a href="#" class="logo" aria-label="Home">Divyanshu Pandey</a>
-    <button id="menu-btn" class="fa fa-bars" aria-label="Open menu"></button>
+    <button id="menu-btn" aria-label="Open menu"></button>
     <nav class="navbar" aria-label="Main menu">
       <ul>
         <li><a href="#home" tabindex="0">Home</a></li>
