--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div> -->
   
   <!-- Dark/Light Mode Toggle -->
-  <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
+  <button class="menu-btn" onclick="toggleTheme()">Toggle Theme</button>
 
 
   <!-- Back to Top Button -->
