--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </div> -->
   
   <!-- Dark/Light Mode Toggle -->
-  <button class="menu-btn" onclick="toggleTheme()">Toggle Theme</button>
-
+   <!-- Dark/Light Mode Toggle -->
+  <button id="theme-toggle" aria-label="Toggle dark mode"><i class="fa-solid fa-moon"></i></button>
 
   <!-- Back to Top Button -->
   <button onclick="window.scrollTo({top:0,behavior:'smooth'});" id="back-to-top" aria-label="Back to top"><i class="fa fa-arrow-up"></i></button>
@@ -46,7 +46,7 @@
   <!-- Navbar -->
   <header>
     <a href="#" class="logo" aria-label="Home">Divyanshu Pandey</a>
-    <button id="menu-btn" aria-label="Open menu"></button>
+    <button id="menu-btn" class="fa fa-bars" aria-label="Open menu"></button>
     <nav class="navbar" aria-label="Main menu">
       <ul>
         <li><a href="#home" tabindex="0">Home</a></li>
