--- a/index.html
+++ b/index.html
@@ -184,52 +184,39 @@
 
 
   <!-- experience section starts -->
-<section id="z-job-track">
-    <h2 class="z-title-headline"><i class="fas fa-briefcase"></i> Work Experience</h2>
-    <div class="z-journey-wrapper">
-      <div class="z-track-node z-right-align">
-        <div class="z-entry-box">
-          <div class="z-role-label"><h2>Self Employed</h2></div>
-          <div class="z-role-details"><h3>Full Stack Developer</h3><p>Oct 2021 - Present</p></div>
+<div class="zcontainer">
+    <h2>Education</h2>
+    <div class="ztimeline">
+      <div class="zeducation-item">
+        <div class="zeducation-dot"></div>
+        <div class="zedu-header">Indian Institute of Technology (IIT) Kanpur</div>
+        <div class="zedu-years">2018 – 2022 · B.Tech in Computer Science</div>
+        <button class="zshow-btn">Show Details</button>
+        <div class="zedu-details">
+          <ul>
+            <li>CGPA: 9.2/10</li>
+            <li>Relevant Coursework: Data Structures, Algorithms, ML, Databases</li>
+            <li>Major Project: “AI-Powered Code Analyzer”</li>
+            <li>Clubs: Coding Club (Lead), Robotics Society</li>
+          </ul>
         </div>
       </div>
 
-      <div class="z-track-node z-left-align">
-        <div class="z-entry-box">
-          <div class="z-role-label"><h2>Mapstreak Flyseas</h2></div>
-          <div class="z-role-details"><h3>Web Developer | Internship</h3><p>June 2021 - Dec 2021</p></div>
-        </div>
-      </div>
-
-      <div class="z-track-node z-right-align">
-        <div class="z-entry-box">
-          <div class="z-role-label"><h2>The Spark Foundation</h2></div>
-          <div class="z-role-details"><h3>Website Developer | Internship</h3><p>May 2021 - June 2021</p></div>
-        </div>
-      </div>
-
-      <div class="z-track-node z-left-align">
-        <div class="z-entry-box">
-          <div class="z-role-label"><h2>The Spark Foundation</h2></div>
-          <div class="z-role-details"><h3>Mobile App Developer | Internship</h3><p>April 2021 - May 2021</p></div>
-        </div>
-      </div>
-
-      <div class="z-track-node z-right-align">
-        <div class="z-entry-box">
-          <div class="z-role-label"><h2>Frshr Technologies</h2></div>
-          <div class="z-role-details"><h3>WordPress Developer | Internship</h3><p>April 2021</p></div>
-        </div>
-      </div>
-
-      <div class="z-track-node z-left-align">
-        <div class="z-entry-box">
-          <div class="z-role-label"><h2>WonderingBlog</h2></div>
-          <div class="z-role-details"><h3>Web Dev & SEO | Internship</h3><p>March 2021 - April 2021</p></div>
+      <div class="zeducation-item">
+        <div class="zeducation-dot"></div>
+        <div class="zedu-header">Delhi Public School</div>
+        <div class="zedu-years">2016 – 2018 · Science (PCM)</div>
+        <button class="zshow-btn">Show Details</button>
+        <div class="zedu-details">
+          <ul>
+            <li>Percentage: 95.4%</li>
+            <li>Achievements: School Topper, Science Olympiad Gold</li>
+            <li>Head of Coding Club</li>
+          </ul>
         </div>
       </div>
     </div>
-  </section>
+  </div>
 <!-- experience section ends -->
 
   <!-- Achievements / Certificates Section -->
