--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   
   <!-- Dark/Light Mode Toggle -->
    <!-- Dark/Light Mode Toggle -->
-  <button id="theme-toggle" aria-label="Toggle dark mode"><i class="fa-solid fa-moon"></i></button>
-
+    <button class="ztheme-toggle" onclick="toggleTheme()">Toggle Theme</button>
   <!-- Back to Top Button -->
   <button onclick="window.scrollTo({top:0,behavior:'smooth'});" id="back-to-top" aria-label="Back to top"><i class="fa fa-arrow-up"></i></button>
 
