--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
         <div class="zedu-years">2018 – 2022 · B.Tech in Computer Science</div>
         <button class="zshow-btn">Show Details</button>
         <div class="zedu-details">
-          <ul>
-            <li>CGPA: 9.2/10</li>
-            <li>Relevant Coursework: Data Structures, Algorithms, ML, Databases</li>
-            <li>Major Project: “AI-Powered Code Analyzer”</li>
-            <li>Clubs: Coding Club (Lead), Robotics Society</li>
+          <ul class="zlist">
+            <li class="zlist-item">CGPA: 9.2/10</li>
+            <li class="zlist-item">Relevant Coursework: Data Structures, Algorithms, ML, Databases</li>
+            <li class="zlist-item">Major Project: “AI-Powered Code Analyzer”</li>
+            <li class="zlist-item">Clubs: Coding Club (Lead), Robotics Society</li>
           </ul>
         </div>
       </div>
@@ -207,10 +207,10 @@
         <div class="zedu-years">2016 – 2018 · Science (PCM)</div>
         <button class="zshow-btn">Show Details</button>
         <div class="zedu-details">
-          <ul>
-            <li>Percentage: 95.4%</li>
-            <li>Achievements: School Topper, Science Olympiad Gold</li>
-            <li>Head of Coding Club</li>
+          <ul class="zlist">
+            <li class="zlist-item">Percentage: 95.4%</li>
+            <li class="zlist-item">Achievements: School Topper, Science Olympiad Gold</li>
+            <li class="zlist-item">Head of Coding Club</li>
           </ul>
         </div>
       </div>
