--- a/index.html
+++ b/index.html
@@ -190,28 +190,28 @@
     <div class="ztimeline">
       <div class="zeducation-item">
         <div class="zeducation-dot"></div>
-        <div class="zedu-header">Indian Institute of Technology (IIT) Kanpur</div>
-        <div class="zedu-years">2018 – 2022 · B.Tech in Computer Science</div>
+        <div class="zedu-header"> Shakun Vidya Niketan</div>
+        <div class="zedu-years">class:10 <sup>th</sup>Passed out in 2023</div>
         <button class="zshow-btn">Show Details</button>
         <div class="zedu-details">
           <ul class="zlist">
-            <li class="zlist-item">CGPA: 9.2/10</li>
-            <li class="zlist-item">Relevant Coursework: Data Structures, Algorithms, ML, Databases</li>
+            <li class="zlist-item">Percentage: 70%</li>
+      <!--      <li class="zlist-item">Relevant Coursework: Data Structures, Algorithms, ML, Databases</li>
             <li class="zlist-item">Major Project: “AI-Powered Code Analyzer”</li>
-            <li class="zlist-item">Clubs: Coding Club (Lead), Robotics Society</li>
+            <li class="zlist-item">Clubs: Coding Club (Lead), Robotics Society</li> -->
           </ul>
         </div>
       </div>
       <div class="zeducation-item">
         <div class="zeducation-dot"></div>
-        <div class="zedu-header">Delhi Public School</div>
-        <div class="zedu-years">2016 – 2018 · Science (PCM)</div>
+        <div class="zedu-header">B.L Academy</div>
+        <div class="zedu-years">Class:12 <sup>th</sup>upcoming year </div>
         <button class="zshow-btn">Show Details</button>
         <div class="zedu-details">
           <ul class="zlist">
-            <li class="zlist-item">Percentage: 95.4%</li>
-            <li class="zlist-item">Achievements: School Topper, Science Olympiad Gold</li>
-            <li class="zlist-item">Head of Coding Club</li>
+            <li class="zlist-item">Subjects: Science (PCM)</li>
+    <!--        <li class="zlist-item">Achievements: School Topper, Science Olympiad Gold</li>
+            <li class="zlist-item">Head of Coding Club</li> -->
           </ul>
         </div>
       </div>
