--- a/index.html
+++ b/index.html
@@ -154,15 +154,23 @@
       <h1>Projects</h1>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Code%20to%20PDF.jpg" alt="Project 1 Screenshot">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/code20%to20%pdf.png" alt="Project 1 Screenshot">
           <h2>Personal Portfolio</h2>
           <p>My own website, built with HTML, CSS and a sprinkle of JavaScript.</p>
           <a href="https://codecr4cker.github.io/Code-2-pdf/" class="primary-btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Chatting%20app.jpg" alt="Project 2 Screenshot">
+          <img src="<div class="project-card">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/chatting app.png" alt="Project 2 Screenshot">
           <h2>Chatting App</h2>
           <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
+          <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <img src="<div class="project-card">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/builder20%website.png" alt="Project 2 Screenshot"
+          <h2>Building Portfolio</h2>
+          <p>A basic Building Portfolio made using React Js, HTML, JavaScript and CSS.</p>
           <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
         </div>
       </div>
@@ -209,7 +217,7 @@
       <h1>Achievements & Certificates</h1>
       <div class="achievements-grid">
         <div class="achievement-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Certificate.jpg" alt="Certificate 1">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/Certificate.jpg" alt="Certificate 1">
           <h2>HTML & CSS Certificate</h2>
           <p>Received from FreeCodeCamp (2024).</p>
         </div>
