--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <h2>Explore the journey of HTML &amp; CSS.</h2>
         <p>Hello! I'm Divyanshu Pandey, a Class 12<sup>th</sup> student passionate about CSS and HTML.</p>
         <a href="#about" class="primary-btn">Explore Me</a>
+
         <div class="social-links">
           <a href="https://github.com/Divyanshu5520" aria-label="GitHub" target="_blank"><img src="https://img.icons8.com/?size=48&id=32323&format=png" class="img" alt="GitHub"></a>
           <a href="#" aria-label="LinkedIn" target="_blank"><img src="https://img.icons8.com/?size=48&id=uLWV5A9vXIPu&format=png" class="img" alt="LinkedIn"></a>
@@ -121,7 +122,7 @@
 
   <!-- Skills Section -->
   <section id="skills" class="section bg-grey reveal-on-scroll">
-    <div class="container column-container">
+    <div class="containerz column-container">
       <h1>Skills</h1>
       <div class="skills-list">
         <div class="skillbar">
@@ -154,23 +155,15 @@
       <h1>Projects</h1>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/code20%to20%pdf.png" alt="Project 1 Screenshot">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Code%20to%20PDF.jpg" alt="Project 1 Screenshot">
           <h2>Personal Portfolio</h2>
           <p>My own website, built with HTML, CSS and a sprinkle of JavaScript.</p>
           <a href="https://codecr4cker.github.io/Code-2-pdf/" class="primary-btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
-          <img src="<div class="project-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/chatting app.png" alt="Project 2 Screenshot">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Chatting%20app.jpg" alt="Project 2 Screenshot">
           <h2>Chatting App</h2>
           <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
-          <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
-        </div>
-        <div class="project-card">
-          <img src="<div class="project-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/builder20%website.png" alt="Project 2 Screenshot"
-          <h2>Building Portfolio</h2>
-          <p>A basic Building Portfolio made using React Js, HTML, JavaScript and CSS.</p>
           <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
         </div>
       </div>
@@ -217,9 +210,10 @@
       <h1>Achievements & Certificates</h1>
       <div class="achievements-grid">
         <div class="achievement-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/Certificate.jpg" alt="Certificate 1">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Certificate.jpg" alt="Certificate 1">
           <h2>HTML & CSS Certificate</h2>
           <p>Received from FreeCodeCamp (2024).</p>
+          <a href="" download=""><button class="certificate">Download</button></a>
         </div>
       </div>
     </div>
@@ -227,7 +221,7 @@
 
   <!-- Testimonials Carousel -->
   <section id="testimonials" class="section bg-grey reveal-on-scroll">
-    <div class="container column-container">
+    <div class="containere column-container">
       <h1>Testimonials</h1>
       <div class="testimonials-carousel">
         <div class="testimonial active">
