--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
 
   <!-- Navbar -->
   <header class="reveal-on-scroll">
-     <svg width="0" height="0">
+    <svg width="0" height="0">
     <filter id="f" x="-50%" y="-200%" width="200%" height="500%">
       <feGaussianBlur stdDeviation="35"></feGaussianBlur>
       <feColorMatrix type="saturate" values="1.3"></feColorMatrix>
       <feComposite in="SourceGraphic"></feComposite>
     </filter>
-  </svg>
-  <a href="#" class="logo" aria-label="Home">Divyanshu Pandey</a>
+  </svg>  <h1 class="logoo"> Divyanshu Pandey </h1>
+  <!-- <h1 class="logoo"> <a href="#"></a> </h1> -->
+   
     <button id="menu-btn" class="hamburger" aria-label="Open menu" aria-expanded="false">
       <span></span>
       <span></span>
@@ -94,10 +95,13 @@
         </div>
         <h3>Hello!</h3>
         <h2><span id="typing"></span></h2>
+
+</body>
+
+
         <h2>Explore the journey of HTML &amp; CSS.</h2>
         <p>Hello! I'm Divyanshu Pandey, a Class 12<sup>th</sup> student passionate about CSS and HTML.</p>
         <a href="#about" class="primary-btn">Explore Me</a>
-
         <div class="social-links">
           <a href="https://github.com/Divyanshu5520" aria-label="GitHub" target="_blank"><img src="https://img.icons8.com/?size=48&id=32323&format=png" class="img" alt="GitHub"></a>
           <a href="#" aria-label="LinkedIn" target="_blank"><img src="https://img.icons8.com/?size=48&id=uLWV5A9vXIPu&format=png" class="img" alt="LinkedIn"></a>
@@ -122,7 +126,7 @@
 
   <!-- Skills Section -->
   <section id="skills" class="section bg-grey reveal-on-scroll">
-    <div class="containerz column-container">
+    <div class="container column-container">
       <h1>Skills</h1>
       <div class="skills-list">
         <div class="skillbar">
@@ -155,16 +159,22 @@
       <h1>Projects</h1>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Code%20to%20PDF.jpg" alt="Project 1 Screenshot">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/code%20to%20pdf.png" alt="Project 1 Screenshot">
           <h2>Personal Portfolio</h2>
           <p>My own website, built with HTML, CSS and a sprinkle of JavaScript.</p>
           <a href="https://codecr4cker.github.io/Code-2-pdf/" class="primary-btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Chatting%20app.jpg" alt="Project 2 Screenshot">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/chatting%20app.png" alt="Project 2 Screenshot">
           <h2>Chatting App</h2>
           <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
           <a href="https://codecr4cker.github.io/react-chat-app/" class="primary-btn" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/builder%20website.png" alt="Project 3 Screenshot">
+          <h2>Chatting App</h2>
+          <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
+          <a href="https://codecr4cker.github.io/html-test/" class="primary-btn" target="_blank">View Project</a>
         </div>
       </div>
     </div>
@@ -177,7 +187,7 @@
       <div class="zeducation-item">
         <div class="zeducation-dot"></div>
         <div class="zedu-header">Shakun Vidya Niketan</div>
-        <div class="zedu-years">Class 10<sup>th</sup> passedout 2023-24</div>
+        <div class="zedu-years">Class 10<sup>th</sup> Passedout 2023-24</div>
         <button class="zshow-btn">Show Details</button>
         <div class="zedu-details">
           <ul class="zlist">
@@ -191,13 +201,13 @@
       <div class="zeducation-item">
         <div class="zeducation-dot"></div>
         <div class="zedu-header">B.L Academy</div>
-        <div class="zedu-years">Class 12<sup>th</sup> upcoming Year 2025-26</div>
+        <div class="zedu-years">Class 12<sup>th</sup> Upcoming Year 2025-26</div>
         <button class="zshow-btn">Show Details</button>
         <div class="zedu-details">
           <ul class="zlist">
             <li class="zlist-item">Percentage: ? </li>
             <li class="zlist-item">Subject: Science (PCM)</li>
-            <!-- <li class="zlist-item">Head of Coding Club</li> -->
+             <!--<li class="zlist-item">Head of Coding Club</li> -->
           </ul>
         </div>
       </div>
@@ -210,10 +220,10 @@
       <h1>Achievements & Certificates</h1>
       <div class="achievements-grid">
         <div class="achievement-card">
-          <img src="https://raw.githubusercontent.com/CodeCr4cker/About/main/Img/Certificate.jpg" alt="Certificate 1">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/Certificate.jpg" alt="Certificate 1">
           <h2>HTML & CSS Certificate</h2>
           <p>Received from FreeCodeCamp (2024).</p>
-          <a href="" download=""><button class="certificate">Download</button></a>
+          <a href="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/Certificate.jpg" download=""><button class="certificate">Download</button></a>
         </div>
       </div>
     </div>
@@ -221,7 +231,7 @@
 
   <!-- Testimonials Carousel -->
   <section id="testimonials" class="section bg-grey reveal-on-scroll">
-    <div class="containere column-container">
+    <div class="container column-container">
       <h1>Testimonials</h1>
       <div class="testimonials-carousel">
         <div class="testimonial active">
