--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Divyanshu Pandey - Portfolio</title>
+  <title>Divyanshu Pandey Portfolio</title>
   <meta name="description" content="Divyanshu Pandey's personal portfolio.">
   <meta name="keywords" content="Divyanshu Pandey, portfolio, HTML, CSS, web developer, student">
   <meta name="author" content="Divyanshu Pandey">
