--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Divyanshu Pandey Portfolio</title>
+  <title>Divyanshu Pandey - Portfolio</title>
   <meta name="description" content="Divyanshu Pandey's personal portfolio.">
   <meta name="keywords" content="Divyanshu Pandey, portfolio, HTML, CSS, web developer, student">
   <meta name="author" content="Divyanshu Pandey">
@@ -87,7 +87,7 @@
 
   <!-- Hero Section -->
   <section id="home" class="first-section bg-grey reveal-on-scroll">
-    <div class="container row-container">
+    <div class="container height row-container">
       <div class="content">
         <br><br><br><br>
         <div class="img-container" alt="Divyanshu">
@@ -297,4 +297,4 @@
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="scripts.js"></script>
 </body>
-</html>
+            </html>
