--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
       <div class="projects-grid">
         <div class="project-card">
           <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/code%20to%20pdf.png" alt="Project 1 Screenshot">
-          <h2>Personal Portfolio</h2>
-          <p>My own website, built with HTML, CSS and a sprinkle of JavaScript.</p>
+          <h2>Convert Code into Pdf</h2>
+          <p>This website is built with HTML, CSS and a sprinkle of JavaScript.</p>
           <a href="https://codecr4cker.github.io/Code-2-pdf/" class="primary-btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
@@ -172,8 +172,8 @@
         </div>
         <div class="project-card">
           <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/builder%20website.png" alt="Project 3 Screenshot">
-          <h2>Chatting App</h2>
-          <p>A basic chatting app made using React Js, HTML, JavaScript and CSS.</p>
+          <h2>Building Portfolio</h2>
+          <p>A basic Building Portfolio made using HTML, JavaScript and CSS.</p>
           <a href="https://codecr4cker.github.io/html-test/" class="primary-btn" target="_blank">View Project</a>
         </div>
       </div>
