--- a/index.html
+++ b/index.html
@@ -244,7 +244,12 @@
         </div>
         <div class="overlay" id="overlay"></div>
         <div class="popup" id="popup">
-          <p>This Website is fully created by Divyanshu Pandey</p>
+        <p>My journey from a simple HTML file to a full-fledged website has been a transformative experience in learning and creativity.</p> 
+	<p>It began with just a blank page and basic HTML tags like `&LTh1&GT ` and `&LTp&GT`, but as my curiosity grew, I started exploring CSS to style my content and make it visually appealing. </p> 
+	<p> Gradually, I learned JavaScript to add interactivity, followed by responsive design techniques to ensure my site looked good on all devices. </p> 
+	<p> I experimented with animations, navigation bars, contact forms, and later integrated tools like GitHub, Firebase, and Netlify to bring my project to life.</p> 
+	<p>Each step came with its own challenges—broken layouts, bugs, and design hurdles—but overcoming them taught me valuable lessons about problem-solving and user experience.</p> 
+	<p>Looking back, it's incredible to see how a single HTML file evolved into a dynamic, hosted website that reflects both my skills and growth as a developer.</p>
           <button class="close-btn" id="closePopup">Close</button>
         </div>
       </div>
